# DisplayProtector

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
src/: main.cpp
